syntax = "proto3";

package torii.sinks.erc20;

// ===== Core Messages =====

// ERC20 Transfer event
message Transfer {
    // Token contract address (32 bytes)
    bytes token = 1;
    // Sender address (32 bytes)
    bytes from = 2;
    // Receiver address (32 bytes)
    bytes to = 3;
    // Amount as U256 (variable length, up to 32 bytes)
    bytes amount = 4;
    // Block number where the transfer occurred
    uint64 block_number = 5;
    // Transaction hash (32 bytes)
    bytes tx_hash = 6;
    // Unix timestamp of the block
    int64 timestamp = 7;
}

// ERC20 Approval event
message Approval {
    // Token contract address (32 bytes)
    bytes token = 1;
    // Owner address (32 bytes)
    bytes owner = 2;
    // Spender address (32 bytes)
    bytes spender = 3;
    // Approved amount as U256 (variable length, up to 32 bytes)
    bytes amount = 4;
    // Block number where the approval occurred
    uint64 block_number = 5;
    // Transaction hash (32 bytes)
    bytes tx_hash = 6;
    // Unix timestamp of the block
    int64 timestamp = 7;
}

// ===== Filters =====

// Direction filter for transfer queries
enum TransferDirection {
    // All transfers (sent and received)
    DIRECTION_ALL = 0;
    // Only sent transfers (wallet is sender)
    DIRECTION_SENT = 1;
    // Only received transfers (wallet is receiver)
    DIRECTION_RECEIVED = 2;
}

// Filter for transfer queries and subscriptions
message TransferFilter {
    // Matches from OR to (wallet-centric filter)
    optional bytes wallet = 1;
    // Exact from address match
    optional bytes from = 2;
    // Exact to address match
    optional bytes to = 3;
    // Token whitelist (empty = all tokens)
    repeated bytes tokens = 4;
    // Direction filter (only applies when wallet is set)
    TransferDirection direction = 5;
    // Minimum block number (inclusive)
    optional uint64 block_from = 6;
    // Maximum block number (inclusive)
    optional uint64 block_to = 7;
}

// Filter for approval queries and subscriptions
message ApprovalFilter {
    // Matches owner OR spender (account-centric filter)
    optional bytes account = 1;
    // Exact owner address match
    optional bytes owner = 2;
    // Exact spender address match
    optional bytes spender = 3;
    // Token whitelist (empty = all tokens)
    repeated bytes tokens = 4;
    // Minimum block number (inclusive)
    optional uint64 block_from = 5;
    // Maximum block number (inclusive)
    optional uint64 block_to = 6;
}

// ===== Pagination =====

// Cursor for paginated queries (opaque to clients)
message Cursor {
    // Block number for cursor position
    uint64 block_number = 1;
    // Row ID within block for tie-breaking
    int64 id = 2;
}

// ===== Query RPCs =====

// Request for GetTransfers RPC
message GetTransfersRequest {
    // Filter criteria
    TransferFilter filter = 1;
    // Cursor from previous response (omit for first page)
    optional Cursor cursor = 2;
    // Maximum number of transfers to return (default: 100, max: 1000)
    uint32 limit = 3;
}

// Response for GetTransfers RPC
message GetTransfersResponse {
    // List of transfers matching the filter
    repeated Transfer transfers = 1;
    // Cursor for next page (absent if no more results)
    optional Cursor next_cursor = 2;
}

// Request for GetApprovals RPC
message GetApprovalsRequest {
    // Filter criteria
    ApprovalFilter filter = 1;
    // Cursor from previous response (omit for first page)
    optional Cursor cursor = 2;
    // Maximum number of approvals to return (default: 100, max: 1000)
    uint32 limit = 3;
}

// Response for GetApprovals RPC
message GetApprovalsResponse {
    // List of approvals matching the filter
    repeated Approval approvals = 1;
    // Cursor for next page (absent if no more results)
    optional Cursor next_cursor = 2;
}

// ===== Subscription RPCs =====

// Request for SubscribeTransfers RPC
message SubscribeTransfersRequest {
    // Client identifier for logging/debugging
    string client_id = 1;
    // Filter criteria for transfers
    TransferFilter filter = 2;
}

// Request for SubscribeApprovals RPC
message SubscribeApprovalsRequest {
    // Client identifier for logging/debugging
    string client_id = 1;
    // Filter criteria for approvals
    ApprovalFilter filter = 2;
}

// Update message for transfer subscriptions
message TransferUpdate {
    // The transfer event
    Transfer transfer = 1;
    // Unix timestamp when the update was generated
    int64 timestamp = 2;
}

// Update message for approval subscriptions
message ApprovalUpdate {
    // The approval event
    Approval approval = 1;
    // Unix timestamp when the update was generated
    int64 timestamp = 2;
}

// ===== Balance Query =====

// Request for GetBalance RPC
message GetBalanceRequest {
    // Token contract address (32 bytes)
    bytes token = 1;
    // Wallet address (32 bytes)
    bytes wallet = 2;
}

// Response for GetBalance RPC
message GetBalanceResponse {
    // Balance as U256 (variable length, up to 32 bytes)
    bytes balance = 1;
    // Last block number where balance was updated
    uint64 last_block = 2;
}

// ===== Stats =====

// Request for GetStats RPC
message GetStatsRequest {}

// Response for GetStats RPC
message GetStatsResponse {
    // Total number of transfers indexed
    uint64 total_transfers = 1;
    // Total number of approvals indexed
    uint64 total_approvals = 2;
    // Number of unique tokens indexed
    uint64 unique_tokens = 3;
    // Latest block number indexed
    uint64 latest_block = 4;
}

// ===== Service =====

// ERC20 indexer service providing queries and subscriptions
service Erc20 {
    // Query historical transfers with filtering and pagination
    rpc GetTransfers(GetTransfersRequest) returns (GetTransfersResponse);

    // Query historical approvals with filtering and pagination
    rpc GetApprovals(GetApprovalsRequest) returns (GetApprovalsResponse);

    // Get balance for a specific token and wallet
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);

    // Subscribe to real-time transfer events with filtering
    rpc SubscribeTransfers(SubscribeTransfersRequest) returns (stream TransferUpdate);

    // Subscribe to real-time approval events with filtering
    rpc SubscribeApprovals(SubscribeApprovalsRequest) returns (stream ApprovalUpdate);

    // Get indexer statistics
    rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}
